ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: dev
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello-iot-ingress-http
  namespace: dev
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`hello-iot.local`)
    middlewares:
    - name: redirect-https
    services:
    - name: hello-iot-service
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello-iot-ingress-https
  namespace: dev
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`hello-iot.local`)
    services:
    - name: hello-iot-service
      port: 80
  tls:
    certResolver: default
